--- a/tp2/config/config.json
+++ b/tp2/config/config.json
@@ -1,8 +1,10 @@
 {
-	"M" : 13,
-	"L" :20,
-	"N" :250,
+	"M" :8,
+	"L" :12.91,
+	"N" :125,
 	"rc" : 1,
-	"r" : 1,
-	"eta" : 1
+	"r" : 0.25,
+	"v" : 0.03,
+	"eta" : 0,
+	"iterations" : 1000
 }
