Planets moving, ship not

--- a/tp4/config_planet/config.json
+++ b/tp4/config_planet/config.json
@@ -1,30 +1,49 @@
 {
 	"planets":{
 		"earth" : {
-			"x" : 1.391734353396533e8, 
-			"y" : -0.571059040560652e8, 
-			"vx": 10.801963811159256,  
-			"vy": 27.565215006898345,  
-			"m" : 5.972e24,
-			"r" : 6371.0 
+			"x" : 1391.734353396533e8, 
+			"y" : -571.059040560652e8, 
+			"vx": 10801.963811159256,  
+			"vy": 27565.215006898345,  
+			"m" : 5.972e24,  
+			"R" : 0,  
+			"G" : 0,  
+			"B" : 255,
+			"r" : 6371000.0 
 		},
 		"mars" : {
-			"x" : 0.831483493435295e8,
-			"y" : -1.914579540822006e8,
-			"vx": 23.637912321314047, 
-			"vy": 11.429021426712032,
-			"m" : 6.4185e23,
-			"r" : 3389.9 
+			"x" : 831.483493435295e8,
+			"y" : -1914.579540822006e8,
+			"vx": 23637.912321314047, 
+			"vy": 11429.021426712032,
+			"m" : 6.4185e23,  
+			"R" : 255,  
+			"G" : 0,  
+			"B" : 0,
+			"r" : 3389900.0 
 		},
 		"sun" : {
 			"x" : 0.0, 
 			"y" : 0.0, 
 			"vx": 0.0, 
 			"vy": 0.0, 
-			"m" : 1.988e30, 
-			"r" : 695700.0 
+			"m" : 1.988e30,  
+			"R" : 255,  
+			"G" : 255,  
+			"B" : 0, 
+			"r" : 695700000.0 
 		}
 	},
-	"dt": 1,
-	"tf": 1500
+	"ship" : {
+		"r":1500000,
+		"v0": 3000.0,
+		"v_orb": 7120.0, 
+		"m" : 2e5,  
+		"R" : 0,  
+		"G" : 255,  
+		"B" : 0, 
+		"rad" : 100.0 
+	},
+	"dt": 100.0,
+	"tf": 31536000.0
 }
