--- a/tp5/config/config.json
+++ b/tp5/config/config.json
@@ -1,14 +1,16 @@
 {
-	"N" : 60,
-	"L" : 1.0,
-	"W" : 1.5, 
-	"D" : 0.1,
+	"N" : 40,
+	"L" : 0.40,
+	"W" : 0.35, 
+	"D" : 0.15,
 	"d_min" : 0.02,
-	"d_max" : 0.03,
-	"g" : 10.0,
-	"tf" : 1.0,
-	"dt" : 1e-4,
-	"kT" : 2e5,
-	"kN" : 1e5,
-	"m" : 0.01
+	"d_max" : 0.03, 
+	"g" : 9.81,
+	"tf" : 3.75,
+	"dt" : 1e-6,
+	"dt2" : 1e-3,
+	"kT" : 2e5,  
+	"kN" : 1e5,  
+	"m" : 0.01,  
+	"case" : "None"
 }
