--- a/tp5/config/config.json
+++ b/tp5/config/config.json
@@ -1,16 +1,16 @@
 {
-	"N" : 40,
-	"L" : 0.40,
-	"W" : 0.35, 
+	"L" : 0.50,
+	"W" : 0.45, 
 	"D" : 0.15,
 	"d_min" : 0.02,
 	"d_max" : 0.03, 
 	"g" : 9.81,
-	"tf" : 3.75,
-	"dt" : 1e-6,
+	"tf" : 5.00,
+	"dt" : 1e-4,
 	"dt2" : 1e-3,
-	"kT" : 2e5,  
-	"kN" : 1e5,  
+	"kT" : 2e4,  
+	"kN" : 1e4,  
 	"m" : 0.01,  
-	"case" : "None"
+	"case" : "None",
+	"sw" : 0.120
 }
